# ConectionSettings

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: build-test-install.yml  qmllint.yml
examples/: CMakeLists.txt  example1.cpp
examples/qml/: example1.qml
include/: nodeConnection.hpp
nodeConection/: CMakeLists.txt
nodeConection/qml/: Node_Connections.qml
nodeConection/src/: nodeConnection.cpp
qml/: NodeConnectionSettings.qml  Node_Connections.qml  window.qml
src/: nodeConnection.cpp
